recursion.cons.remove.Remove.scala.error
Erreur de compilation :
Remove:5: error: type mismatch;
 found   : Unit
 required: List[Int]
    if(l.head!=v){
    ^