recursion.cons.remove.Remove.scala.code
def remove(l:List[Int], v:Int): List[Int] = {
  if (l==Nil) { return Nil }
  else {
    if(l.head!=v){
      l.head::remove(l.tail,v)
    }
  }
}
